# sl-dbtools

./: .example.env  .example.test.env  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  common.mk  migrate.mk
crates/sl-dbtools/: .example.test.env  .test.env.bak  Cargo.toml  README.md
crates/sl-dbtools/src/: cli.rs  conn.rs  error.rs  lib.rs  main.rs  managed.rs  manager.rs  migration.rs  namer.rs  test.rs  url.rs
crates/sl-dbtools/src/cli/: dump.rs  error.rs  info.rs  load.rs  migrate.rs  mod.rs  temp.rs
crates/sl-dbtools/src/db/: mod.rs  namer.rs  transient.rs  url.rs
crates/sl-dbtools/src/db/managed/: mod.rs  pg.rs
crates/sl-dbtools/src/db/manager/: mod.rs  pg.rs  postgres.rs  sqlite.rs
crates/sl-dbtools/src/db/pg/: managed.rs  manager.rs  migrate.rs  mod.rs  temp.rs
crates/sl-dbtools/src/db/pg/util/: create.rs  dump.rs  file.rs  mod.rs
crates/sl-dbtools/src/db/temp/: pg.rs
crates/sl-dbtools/src/db/transient/: mod.rs  pg.rs
crates/sl-dbtools/src/dump/: mod.rs  pgdump.rs
crates/sl-dbtools/src/migrate/: file.rs  manager.rs  mod.rs  pg.rs  planner.rs  step.rs  version.rs
crates/sl-dbtools/src/testing/: pg.rs
crates/sl-dbtools/src/util/: formatting.rs  mod.rs  pg.rs  url.rs
scripts/: schema-ref.sh
sl-migrate/: .example.migrate.env  export-env.sh  migrate-db.sh  migrate.mk  parse-uri.sh
tests/migrations/: 00-create-version-table.dn.sql  00-create-version-table.up.sql  01-create-user-table.dn.sql  01-create-user-table.up.sql  02-update-user-table.dn.sql  02-update-user-table.up.sql  03-clear-password.up.sql  04-remove-password.dn.sql  HEAD.sql  ROOT.sql
tests/migrations-bad/: 00-create-version-table.dn.sql  01-create-user-table.up.sql  02-update-user-table-bad.dn.sql  02-update-user-table-bad.up.sql  04-remove-password.dn.sql  04-remove-password.up.sql  README.md
tests/seeds/: 00-test-seed.sql
tests/seeds/pg/: 00-test-seed.sql  01-mid-migrate.sql
util/: migrate-db.sh
