[package]
name = "sl-dbtools"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
dotenv = "0.15.0"
md5 = "0.7.0"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "any", "sqlite", "postgres"] }
tokio = { version = "1.40.0", features = ["macros"] }
url = "2.5.2"
uuid = { version = "1.11.0", features = ["v4"] }
